# argiope

./: .gitignore  AUTHORS  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
argiope/: Mesh-save.py  __init__.py  indentation.py  materials.py  mesh.py  models.py  test.h5  test.xdmf  utils.py
argiope/abq/: __init__.py  abqpostproc.py  pypostproc.py
argiope/assets/: abqpostproc.py
argiope/templates/indentation/: abqpostproc.py  indentation.inp  indentation_mesh_2D.geo  pypostproc.py
argiope/templates/materials/: Elastic.inp  ElasticPerfectlyPlastic.inp  ElasticPlastic.inp  ElasticPlasticRateDep.inp  LinearDruckerPrager.inp  Material.inp  ThermoElastic.inp
argiope/templates/mesh/: inp.inp  xdmf.xdmf  xdmf_attribute.xdmf
argiope/tests/abq/: mod_rpt.py  out.csv  report.py
argiope/tests/materials/: materials.py
argiope/tests/mesh/: aa.pos  angles.py  aspect_ratio.py  centroids.py  demo.geo  demo.msh  demo_3d.geo  dummy.geo  dummy.msh  dump2inp.py  edges.py  element_surfaces.py  elements.py  faces.py  inp.inp  mesh.py  nset2surface.py  polycollection.py  sample_mesh_2D.geo  sample_mesh_2D.msh  sets.py  split.py  split2.py  stats.geo  surface.py  test.csv  triangulation.py
doc/: conf.py  index.rst  materials.rst  mesh.rst  models.rst  notebooks_index.template  utils.rst
doc/indentation/: demo_indentation.py  sample_mesh_2D.py
doc/mesh/: Mesh-to_polycollection.py  Mesh-to_triangulation.py  Mesh-write_inp.py  demo.geo  demo.msh
sandbox/mesh/: meshio_gmsh4.py  sample.msh
tests/: mesh_example.py  test_mesh.py  test_structured_mesh.py
(+54 files in other folders)
